--- a/.cordova/config.json
+++ b/.cordova/config.json
@@ -1,1 +1,1 @@
-{"lib":{"www":{"id":"phonegap","version":"3.1.0","uri":"https://github.com/phonegap/phonegap-app-hello-world/archive/3.1.0.tar.gz"}},"id":"com.example.chilecompra","name":"ChileCompra"}
+{"lib":{"www":{"id":"phonegap","version":"3.1.0","uri":"https://github.com/phonegap/phonegap-app-hello-world/archive/3.1.0.tar.gz"}},"id":"com.example.chilecompra","name":"ChileCompra","phonegap":{"id":1193337}}
